add file .env
